--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -32,6 +33,16 @@
             margin-top: 20px;
             font-weight: bold;
         }
+        footer {
+            margin-top: 20px;
+            padding: 10px;
+            background: #333;
+            color: white;
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            bottom: 0;
+        }
     </style>
 </head>
 <body>
@@ -40,5 +51,8 @@
         <p>Nosso site está em manutenção, volte em breve para novidades!</p>
         <p class="contact">Entre em contato: <a href="mailto:contato@ewandro.com.br">contato@empresa.com</a></p>
     </div>
+    <footer>
+        <p>&copy; 2025 Todos os direitos reservados - CNPJ XXX</p>
+    </footer>
 </body>
 </html>
