--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p class="contact">Entre em contato: <a href="mailto:contato@ewandro.com.br">contato@empresa.com</a></p>
     </div>
     <footer>
-        <p>&copy; 2025 Todos os direitos reservados - CNPJ XXX</p>
+        <p>&copy; 2025 Todos os direitos reservados - CNPJ 33.525.120/0001-61</p>
     </footer>
 </body>
 </html>
