--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
         <h1>Em Breve!</h1>
         <p>Nosso site está em manutenção, volte em breve para novidades!</p>
-        <p class="contact">Entre em contato: <a href="mailto:contato@ewandro.com.br">contato@empresa.com</a></p>
+        <p class="contact">Entre em contato: <a href="mailto:contato@ewandro.com.br">contato@ewandro.com.br</a></p>
     </div>
     <footer>
         <p>&copy; 2025 Todos os direitos reservados - CNPJ 33.525.120/0001-61</p>
